--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "framer-motion": "^11.0.2",
-    "lucide-react": "^0.314.0",
+    "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
